--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
            <img src="navigation bar.webp">
             <nav>
                 <ul>
-                    <li><a href="file:///D:/html%20and%20css/css/external.html">CRYPTOGRAPHY</a></li>
-                    <li><a href="file:///D:/html%20and%20css/css/internal.html">CYBERSECURITY ETHICS</a></li>
+                    <li><a href="css/external.html">CRYPTOGRAPHY</a></li>
+                    <li><a href="css/internal.html">CYBERSECURITY ETHICS</a></li>
                     
                 </ul>
             </nav>
@@ -94,7 +94,7 @@
   <p style="font-size:30px"> 
   <br/>
   <b>To know more about our cybersecurity cources and to enroll in introduction to cybersecurity course follow the given link . </b>
-  <a href="file:///D:/html%20and%20css/cybersecurity%20app%20forms.html"> cybersecurity application </a>
+  <a href="cybersecurity%20app%20forms.html"> cybersecurity application </a>
   <br/>
   <br/>  
   <br/>
