--- a/css/external.html
+++ b/css/external.html
@@ -43,7 +43,7 @@
   </div> 
 
   <p>
-     <a href = "file:///D:/html%20and%20css/All%20fuctions%20html%20progmam.html"> <u>Click here</u> <a> to navigate to the previous page !. 
+     <a href = "../index.html"> <u>Click here</u> <a> to navigate to the previous page !. 
   </p>
   
 </body>
