Update cybersecurity app forms.html

--- a/cybersecurity app forms.html
+++ b/cybersecurity app forms.html
@@ -19,12 +19,12 @@
     
 <p style="font-size:30px; font-family: -apple-system, BlinkMacSystemFont, sans-serif;"> 
     <label> First name:
-    <input name="firstName"/>
+    <input name="firstName" required/>
     </label>
 </p>
 <p style = "font-size:30px; font-family: -apple-system, BlinkMacSystemFont, sans-serif;">
     <label> Last name:
-    <input name="lastName"/>
+    <input name="lastName" required/>
     </label>
 </p>
 <p style ="font-size:30px; font-family: -apple-system, BlinkMacSystemFont, sans-serif;" >
@@ -34,7 +34,7 @@
 </p>
 <p style = "font-size:30px; font-family: -apple-system, BlinkMacSystemFont, sans-serif;">
     <label> Grade <br/>
-    <select name="gradeYear">
+    <select name="gradeYear" required>
       <option>--none--</option>
       <option> Year 1 </option>
       <option> Year 2 </option>
