Update cybersecurity app forms.html

--- a/cybersecurity app forms.html
+++ b/cybersecurity app forms.html
@@ -45,7 +45,7 @@
 </p>
 <p style = "font-size : 25px; font-family: -apple-system, BlinkMacSystemFont, sans-serif;">
     <label> 
-    <input type="submit" onclick="msg()"> 
+      <button type="submit" onclick="msg()">submit</button> 
     </label>
 </p>
 </body>
